<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeedGame2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="newgame">NEW GAME</string>
    <string name="stadistics">STADISTICS</string>
    <string name="preferences">PREFERENCES</string>
    <string name="B11">B11</string>
    <string name="B12">B12</string>
    <string name="B13">B13</string>
    <string name="B14">B14</string>
    <string name="B15">B15</string>
    <string name="B16">B16</string>
    <string name="B21">B21</string>
    <string name="B22">B22</string>
    <string name="B23">B23</string>
    <string name="B24">B24</string>
    <string name="B25">B25</string>
    <string name="B26">B26</string>
    <string name="T1">T1</string>
    <string name="T2">T2</string>
    <string name="space">----</string>
	<string name="start">Start</string>
	<string name="start2">Start In Specific Board Situation</string>
	<string name="state">Game State</string>
	<string name="explica">The structure of the Input text has to be 15 numbers (greater than 0) separated by a comma (,) and the last number has to be 1 or 2. The first 6 numbers are all the Bowls of player 1, the following 6 numbers are all the Bowls of player 2, then you have to enter the Tray of player 2 and the Tray of player 1. At least one bowl of each player has at least one seed. An Example is: 3,3,3,3,3,3,3,3,3,3,3,3,0,0,1 </string>
	<string name="selectCreatePlayersText">Please select or create the players to begin the match. This is an Autocomplete, then begin to type the name of the player, if he/she is available it will appear. If not, the user will be created.  </string>
	<string name="createSelectPlayer1">Create or Select Player 1</string>
	<string name="createSelectPlayer2">Create or Select Player 2 </string>
	<string name="namePlayer1">Name of Player 1</string>
	<string name="namePlayer2">Name of Player 2 </string>
	<string name="Continue">Continue</string>
	<string name="computer">Play Against Computer</string>
	
	<string name="empty">           </string>
	<string name="moves"> Game moves  </string>
	
	<string name="controlSound">   Control Sound       </string>
	<string name="backgroundSound"> Background Sound  </string>
	<string name="animation"> Include Animation  </string>
	<string name="selectPreferences"> Select the Configuration of the game  </string>
	
</resources>