<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectPreferences"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />
     
    <CheckBox
        android:id="@+id/checkBoxControlSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controlSound" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBoxBackgroundSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backgroundSound" />

   <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   <CheckBox
       android:id="@+id/checkBoxAnimation"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/animation" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/imageButtonnewgame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/custombuttonnewgame"
        android:background="@drawable/empty"
        android:contentDescription="@string/empty"
         />

</LinearLayout>
