<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pollo"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvPlayerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/frameAnimation"
                android:layout_width="60dp"
                android:layout_height="105dp"
                android:contentDescription="@string/empty"
                />

            <ImageView
                android:id="@+id/chickenPlayer1"
                android:layout_width="60dp"
                android:layout_height="105dp"
                android:contentDescription="@string/empty"
                android:src="@drawable/pollo" />

            <ImageView
                android:id="@+id/chickenPlayer2"
                android:layout_width="60dp"
                android:layout_height="105dp"
                android:contentDescription="@string/empty"
                android:src="@drawable/pollo" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/iv00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/iv10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <TextView
                android:id="@+id/tvspace1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvspace2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvspace3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvspace4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/iv15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/iv20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />

            <ImageView
                android:id="@+id/iv25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:src="@drawable/zero" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tvspace6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="bottom"
        >

        <TextView
            android:id="@+id/moves"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"/>
    </ScrollView>

</LinearLayout>